<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/tv_titulo"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/compas"
            android:tint="@color/white"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/tv_titulo_t"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_campo_t_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_t_1"/>
        <EditText
            android:id="@+id/et_campo_t_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_t_2"/>
        <Button
            android:id="@+id/btn_calcular_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="140dp"
            android:text="@string/btn_t"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/tv_titulo_r"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_campo_r_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_r_1"/>
        <EditText
            android:id="@+id/et_campo_r_altura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_r_2"/>
        <Button
            android:id="@+id/btn_calcular_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="140dp"
            android:text="@string/btn_t"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_ir_actividad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_h"
        />
</LinearLayout>