<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleActivity"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="359dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/tv_titulo_2"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60dp"
            android:src="@drawable/compas"
            android:tint="@color/white"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#00FFFFFF">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/tv_titulo_h"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/et_campo_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_h_1"/>
        <EditText
            android:id="@+id/et_campo_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/et_dato_h_2"/>
        <Button
            android:id="@+id/btn_limpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_h_limpiar"
            />
        <Button
            android:id="@+id/btn_calcular_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginTop="140dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_h_calcular"
            />
    </androidx.cardview.widget.CardView>

</LinearLayout>